added map feature

--- a/seniorDesign/seniorDesign.csproj
+++ b/seniorDesign/seniorDesign.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
+    <Folder Include="fonts\" />
     <Folder Include="Views\Data\" />
   </ItemGroup>
   <ItemGroup>
@@ -105,9 +106,11 @@
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DeleteAdminController.cs" />
     <Compile Include="Controllers\DeleteController.cs" />
+    <Compile Include="Controllers\DisplayController.cs" />
     <Compile Include="Controllers\EditController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Main_Database_For_DirectoryController.cs" />
+    <Compile Include="Controllers\ShowAllController.cs" />
     <Compile Include="DatabaseModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -220,15 +223,15 @@
     <Content Include="css\datatable.min.css" />
     <Content Include="css\font-awesome.css" />
     <Content Include="css\font-awesome.min.css" />
-    <Content Include="fonts\fontawesome-webfont.eot" />
-    <Content Include="fonts\fontawesome-webfont.svg" />
-    <Content Include="fonts\fontawesome-webfont.ttf" />
-    <Content Include="fonts\fontawesome-webfont.woff" />
-    <Content Include="fonts\FontAwesome.otf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="css\fontawesome-webfont.eot" />
+    <Content Include="css\fontawesome-webfont.svg" />
+    <Content Include="css\fontawesome-webfont.ttf" />
+    <Content Include="css\fontawesome-webfont.woff" />
+    <Content Include="css\FontAwesome.otf" />
+    <Content Include="css\glyphicons-halflings-regular.eot" />
+    <Content Include="css\glyphicons-halflings-regular.svg" />
+    <Content Include="css\glyphicons-halflings-regular.ttf" />
+    <Content Include="css\glyphicons-halflings-regular.woff" />
     <Content Include="Views\Add\Add.cshtml" />
     <Content Include="Views\List\List.cshtml" />
     <Content Include="Views\Map\map_of_world.jpg" />
@@ -252,6 +255,8 @@
     <Content Include="Views\DeleteAdmin\DeleteAdmin.cshtml" />
     <Content Include="Views\ApproveAdmin\ApproveAdmin.cshtml" />
     <Content Include="Views\Comments\Comments.cshtml" />
+    <Content Include="Views\ShowAll\ShowAll.cshtml" />
+    <Content Include="Views\Display\Display.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -282,8 +287,8 @@
     <Content Include="dataModel.edmx.diagram">
       <DependentUpon>dataModel.edmx</DependentUpon>
     </Content>
-    <None Include="fonts\fontawesome-webfont.woff2" />
-    <None Include="fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="css\fontawesome-webfont.woff2" />
+    <None Include="css\glyphicons-halflings-regular.woff2" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
   </ItemGroup>
   <ItemGroup>
