--- a/seniorDesign/seniorDesign.csproj
+++ b/seniorDesign/seniorDesign.csproj
@@ -97,9 +97,6 @@
     <Folder Include="Views\Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Comment_Table.cs">
-      <DependentUpon>DatabaseModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminMainController.cs" />
     <Compile Include="Controllers\ApproveAdminController.cs" />
@@ -152,8 +149,26 @@
     <Compile Include="Controllers\AddController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="Controllers\MapController.cs" />
+    <Compile Include="Comment_Table.cs">
+      <DependentUpon>SeniorEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Main_Database_For_Directory.cs">
-      <DependentUpon>DatabaseModel.tt</DependentUpon>
+      <DependentUpon>SeniorEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeniorEntity.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SeniorEntity.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeniorEntity.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SeniorEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeniorEntity.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SeniorEntity.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\userInput.cs" />
     <Compile Include="SQLConnClass.cs" />
@@ -187,7 +202,24 @@
       <DependentUpon>dataModel.edmx</DependentUpon>
       <LastGenOutput>dataModel.cs</LastGenOutput>
     </Content>
+    <EntityDeploy Include="SeniorEntity.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>SeniorEntity.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="SeniorEntity.edmx.diagram">
+      <DependentUpon>SeniorEntity.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="SeniorEntity.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SeniorEntity.edmx</DependentUpon>
+      <LastGenOutput>SeniorEntity.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="SeniorEntity.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SeniorEntity.edmx</DependentUpon>
+      <LastGenOutput>SeniorEntity.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
